# onegin_sort

./: CMakeLists.txt  README.md  run_hamlet.sh  run_onegin.sh
apps/: CMakeLists.txt  main.cpp
docs/: mainpage.md
examples/: rus.txt  text.txt
include/onegin/: hello.h  sort.h  stringpart.h  utf8.h  utils.h
src/: CMakeLists.txt  hello.cpp  sort.cpp  stringpart.cpp  utf8.cpp  utils.cpp
test/: CMakeLists.txt  sort.cpp  stringpart.cpp  testHello.cpp  utf8.cpp  utils.cpp
